--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/HomeApps.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/HomeApps.cshtml
@@ -7,10 +7,16 @@
         margin-top: 0px;
         margin-bottom: 20px;
     }
+
+    .quick-btn {
+        height: 100px;
+        padding: 2px;
+        margin: 10px;
+    }
 </style>
 
 <div class="extensions-heading">
-    <h2>Apps</h2>
+    <h2><i class="icon-dashboard"></i>&nbsp;Apps</h2>
 </div>
 
 <div class="box">
