--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsUpdate.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsUpdate.cshtml
@@ -14,12 +14,14 @@
     }
 
     .setting-heading h2 {
-    margin-left:0.1em;
+        margin-left: 0.1em;
+        margin-top: 0px;
+        margin-bottom: 20px;
     }
 </style>
 
 <div class="setting-heading">
-    <h2>Update MultiPlug</h2>
+    <h2><i class="icon-download-alt"></i>&nbsp;Update MultiPlug</h2>
 </div>
 <form class="" action="" method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded">
     @if (Model.Extension.Model.UpdatePending)
