--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/HomeExtensions.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/HomeExtensions.cshtml
@@ -1,11 +1,13 @@
 ﻿@model MultiPlug.Base.Http.EdgeApp
 
-<div class="box">
-
+<div class="row-fluid">
     <ul class="nav nav-tabs" id="myTab">
         <li class="active"><a href="#events-subs">Extensions</a></li>
         <li><a href="#mappings">Mappings</a></li>
     </ul>
+</div>
+
+<div class="box">
     <div id="myTabContent" class="tab-content" style="margin-bottom: 10px">
         <div class="tab-pane fade in active" id="events-subs">
             <p>Events, Subscriptions and Web Apps of the Extensions</p>
