--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHosting.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHosting.cshtml
@@ -17,121 +17,232 @@
 
     .setting-heading h2 {
         margin-left: 0.1em;
+        margin-top: 0px;
+        margin-bottom: 20px;
     }
 </style>
 
 <div class="setting-heading">
-    <h2>Hosting</h2>
+    <h2><i class="icon-cloud"></i>&nbsp;Hosting</h2>
 </div>
-<form style="display:contents" method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded">
-    <h3 class="box-header">
-        Server URLs
-    </h3>
 
-    <div class="box">
+<h3 class="box-header">
+    Server URLs
+</h3>
 
-        <div class="row-fluid">
-            <div class="span4">
-                <div class="row-fluid"><div class="span12">Host by IP</div></div>
-                <div class="row-fluid">
-                    <input type="checkbox" name="HostByIP" value="true" @Model.Extension.Model.HostByIP />
-                </div>
-            </div>
+<div class="box non-collapsible">
 
-            <div class="span4">
-                <div class="row-fluid"><div class="span12">Host Port</div></div>
-                <div class="row-fluid">
-                    <input name="HostByIPPort" class="input-small" type="text" @*id="Param_LocalHostPort"*@ placeholder="80" value="@Model.Extension.Model.HostByIPPort">
-                </div>
-            </div>
-
-            <div class="span4">
-                <div class="row-fluid"><div class="span12">Secure</div></div>
-                <div class="row-fluid">
-                    <input type="checkbox" name="HostByIPSecure" value="true" @Model.Extension.Model.HostByIPSecure />
-                </div>
+    <div class="row-fluid" id="div-hostingbyip">
+        <div class="span3">
+            <div class="row-fluid"><div class="span12">Host by IP Address :</div></div>
+            <div class="row-fluid">
+                <input id="input-hostbyipenabled" type="checkbox"/>
             </div>
         </div>
-
-        <div class="row-fluid">
-            <div class="span12">
-                Host by Names
+        <div class="span3">
+            <div class="row-fluid"><div class="span12">http Port :</div></div>
+            <div class="row-fluid">
+                <input id="input-hostbyipport" class="input-small" type="number" placeholder="80" min="0"/>
             </div>
         </div>
-
-        <div class="row-fluid">
-
-            <table class="table table-condensed" id="bindings-table">
-                @*<thead>
-                    <tr>
-                        <th>Host by Names</th>
-                        <th></th>
-                    </tr>
-                </thead>*@
-                <tbody>
-                    @foreach (var Binding in @Model.Extension.Model.HostBindings)
-                    {
-                        <tr>
-                            <td><input name="HostBindings" class="input-span12" type="text" value="@Binding"></td>
-                            <td><a class="delete-binding">Delete</a></td>
-                        </tr>
-                    }
-
-                    <tr>
-                        <td></td>
-                        <td><a class="add-binding">Add</a></td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="span3">
+            <div class="row-fluid"><div class="span12">https Secure :</div></div>
+            <div class="row-fluid">
+                <input id="input-hostbyipsecure" type="checkbox"/>
+            </div>
         </div>
-
+        <div class="span3">
+            <div class="row-fluid"><div class="span12"></div></div>
+            <div class="row-fluid">
+                <a id="btn-hostbyip" class="btn btn-green"><i class="icon-save"></i> Save</a>
+            </div>
+        </div>
     </div>
 
     <div class="row-fluid">
-        <div class="span6">
-            <button type="submit" value="submit" class="btn btn-green btn-block">Save</button>
-        </div>
-        <div class="span6">
-            <button id="cancel-btn" type="button" class="btn  btn-block">Cancel</button>
-        </div>
+        <p><i class="icon-info-sign"></i> To disable hosting by http set the Port to Zero.</p>
     </div>
 
-    <h3 class="box-header">@Model.Extension.Model.FileName</h3>
-    <div class="box" style="height:75%">
-        <div class="row-fluid full-height">
-            <textarea name="FileContent" spellcheck="false" rows="3" class="input-block-level full-height" wrap="off" style="resize: none;">@Model.Extension.Model.FileContent</textarea>
+    <form id="form-bindings" autocomplete="off" method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded">
+        <div class="row-fluid" id="div-bindings">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th class="span11">Host by URL Bindings</th>
+                        <th class="span1"></th>
+                    </tr>
+                </thead>
+                <tbody id="bindingsTableBody"></tbody>
+            </table>
         </div>
+    </form>
+</div>
+
+<h3 class="box-header">Themes</h3>
+<div class="box" id="div-theme">
+    <div class="row-fluid">
+        <div class="span12">MultiPlug.Theme.json :</div>
     </div>
-</form>
+    <form id="form-theme" autocomplete="off" method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded">
+        <div class="row-fluid">
+            <textarea id="textarea-themefile" name="contents" spellcheck="false" rows="20" class="input-block-level" wrap="off" style="resize: none;"></textarea>
+        </div>
+
+        <div class="row-fluid">
+            <button type="submit" class="btn btn-green"><i class="icon-save"></i> Save</button>
+        </div>
+    </form>
+</div>
+
 
 <script>
-    $('#cancel-btn').click(function () {
-        location.reload();
-    });
-
-    function NewBinding() {
-        return '<tr>\
-    <td><input name="HostBindings" class="input-span12" type="text" value="http://"></td>\
-    <td><a class="delete-binding">Delete</a></td>\
-</tr>';
-
+    function OnError(xhr) {
+        if (xhr.status == 401) {
+            alert('Action requires User Log On');
+        }
+        if (xhr.status == 403) {
+            alert('Insufficient user rights');
+        }
     }
 
-    function ApplyDelete(deletelink) {
-        $(deletelink).click(function (e) {
-            e.preventDefault();
-            $(this).closest('tr').remove();
+    function SaveBindings() {
+        $.ajax({
+            type: 'POST',
+            url: "@Raw(Model.Context.Paths.Roots.MultiPlug)configuration/hosting/bindings?" + $("#form-bindings").serialize(),
+            async: false,
+            success: function (data) {
+                OnBindingsSuccess(data);
+                alert("Save Successful");
+            },
+            error: function (data) {
+                OnError(data);
+            }
         });
     }
 
-    $(".add-binding").click(function (e) {
-        e.preventDefault();
+    function SaveTheme() {
+        $.ajax({
+            type: 'POST',
+            url: "@Raw(Model.Context.Paths.Roots.MultiPlug)configuration/theme/file?" + $("#form-theme").serialize(),
+            async: false,
+            success: function (data) {
+                OnThemeFileSuccess(data);
+                alert("Save Successful");
+            },
+            error: function (data) {
+                OnError(data);
+            }
+        });
+    }
 
-        $('#bindings-table tr:last').prev().after(NewBinding());
-        ApplyDelete($('#bindings-table tr:last').prev().find(".delete-binding"));
+    function OnBindingsSuccess(data) {
+        var input = $("#bindingsTableBody")
+        input.empty();
 
+        for (let i in data.bindings) {
+            input.append('<tr><td class="span11"><input name="bindings" class="input-span12" type="text" value="' + data.bindings[i] + '"></td><td class="span1"><a class="btn btn-red delete-binding"><i class="icon-trash"></i></a></td></tr>');
+        }
+
+        input.append('<tr id="action-bar"><td class="span11"><button type="submit" id="btn-bindingssave" class="btn btn-green"><i class="icon-save"></i> Save</button></td><td class="span1"><button type="button" id="btn-newhostbinding" class="btn btn-green"><i class="icon-plus"></i></button></td></tr>')
+
+        $("#btn-newhostbinding").click(function (event) {
+            event.preventDefault();
+            $("#action-bar").before('<tr><td class="span11"><input name="bindings" class="input-span12" type="text" value="http://"></td>\<td class="span1"></td>\</tr>');
+
+        });
+
+        $(".delete-binding").click(function (event) {
+            event.preventDefault();
+            if (confirm("Are you sure you want to delete the Host Binding?") == true) {
+                $(this).closest("tr").remove();
+                SaveBindings();
+            }
+        });
+    }
+
+    function OnHostByIpSuccess(data) {
+        $('#input-hostbyipenabled').prop('checked', data.enabled);
+        $('#input-hostbyipport').val(data.port);
+        $('#input-hostbyipsecure').prop('checked', data.secure);
+    }
+
+    function OnThemeFileSuccess(data)
+    {
+        $('#textarea-themefile').val(data.contents);
+    }
+
+    $(document).ready(function () {
+
+        $("#btn-hostbyip").click(function (event) {
+            event.preventDefault();
+
+            $.ajax({
+                type: 'POST',
+                url: "@Raw(Model.Context.Paths.Roots.MultiPlug)configuration/hosting/byip?enabled=" + $('#input-hostbyipenabled').is(":checked") + "&port=" + $('#input-hostbyipport').val() + "&secure=" + $('#input-hostbyipsecure').is(":checked"),
+                async: false,
+                success: function (data) {
+                    OnHostByIpSuccess(data);
+                    alert("Save Successful");
+                },
+                error: function (data) {
+                    OnError(data);
+                }
+            });
+        });
+
+        $("#form-bindings").on("submit", function (event) {
+            event.preventDefault();
+            SaveBindings();
+        });
+
+        $("#form-theme").on("submit", function (event) {
+            event.preventDefault();
+            SaveTheme();
+        });
+
+        $.ajax({
+            url: "@Raw(Model.Context.Paths.Roots.MultiPlug)configuration/hosting/byip",
+            type: "GET",
+            success: function (data) {
+                OnHostByIpSuccess(data);
+            },
+            error: function (data) {
+                if (data.status == 401 || data.status == 403) {
+                    var d = $("#div-hostingbyip");
+                    d.empty();
+                    d.append('<div class="span5"><p>Host by IP :</p></div><div class="span5"><span class="label label-red">INSUFFICIENT USER RIGHTS</span></div>');
+                }
+            }
+        });
+
+        $.ajax({
+            url: "@Raw(Model.Context.Paths.Roots.MultiPlug)configuration/hosting/bindings",
+            type: "GET",
+            success: function (data) {
+                OnBindingsSuccess(data);
+            },
+            error: function (data) {
+                if (data.status == 401 || data.status == 403) {
+                    var d = $("#div-bindings");
+                    d.empty();
+                    d.append('<div class="span5"><p>Host by URL Bindings :</p></div><div class="span5"><span class="label label-red">INSUFFICIENT USER RIGHTS</span></div>');
+                }
+            }
+        });
+
+        $.ajax({
+            url: "@Raw(Model.Context.Paths.Roots.MultiPlug)configuration/theme/file",
+            type: "GET",
+            success: function (data) {
+                OnThemeFileSuccess(data);
+            },
+            error: function (data) {
+                if (data.status == 401 || data.status == 403) {
+                    var d = $("#div-theme");
+                    d.empty();
+                    d.append('<span class="label label-red">INSUFFICIENT USER RIGHTS</span>');
+                }
+            }
+        });
     });
-
-
-    ApplyDelete($(".delete-binding"));
 </script>
