--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHousekeeping.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHousekeeping.cshtml
@@ -17,19 +17,72 @@
 
     .setting-heading h2 {
         margin-left: 0.1em;
+        margin-top: 0px;
+        margin-bottom: 20px;
     }
 </style>
 
 <div class="setting-heading">
-    <h2>Housekeeping</h2>
+    <h2><i class="icon-trash"></i>&nbsp;Housekeeping</h2>
 </div>
 
 <h3 class="box-header">
     Storage
 </h3>
-<div class="box">
+<div class="box non-collapsible">
     <div class="row-fluid">
-        <a href="/settings/housekeeping/storage/" class="btn btn-blue">Log files</a>
+        <div class="control-group">
+            <a href="/settings/housekeeping/storage/" class="btn btn-blue">Log Files</a>
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="span6">
+            <p>Core System files life expectancy (deletion) :</p>
+        </div>
+        <div class="span2">
+            <input type="number" id="systemFilesLife" class="input-block-level" min="0" max="365"/>
+
+        </div>
+        <div class="span2">
+            <p>Days</p>
+        </div>
+        <div class="span2">
+            <a class="btn btn-green" id="btn-systemFilesLife"><i class="icon-save"></i></a>
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="span6">
+            <p>Extension System files record expectancy (deletion) :</p>
+        </div>
+        <div class="span2">
+            <input type="number" id="extensionSystemRecordsLife" class="input-block-level" min="0" max="400" />
+
+        </div>
+        <div class="span2">
+            <p>Records</p>
+        </div>
+        <div class="span2">
+            <a class="btn btn-green" id="btn-extensionSystemRecordsLife"><i class="icon-save"></i></a>
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="span6">
+            <p>Extension files life expectancy (deletion) :</p>
+        </div>
+        <div class="span2">
+            <input type="number" id="extensionsFilesLife" class="input-block-level" min="0" max="365" />
+        </div>
+        <div class="span2">
+            <p>Days</p>
+        </div>
+        <div class="span2">
+            <a class="btn btn-green" id="btn-extensionsFilesLife"><i class="icon-save"></i></a>
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="span12">
+            <p><i class="icon-info-sign"></i> Set to Zero to never automatically delete files or records.</p>
+        </div>
     </div>
 </div>
 
@@ -37,7 +90,7 @@
 <h3 class="box-header">
     Memory
 </h3>
-<div class="box">
+<div class="box non-collapsible">
     <div class="row-fluid">
         <table class="table table-condensed">
             <thead>
@@ -64,3 +117,121 @@
         </table>
     </div>
 </div>
+<script>
+    function OnError(xhr) {
+        if (xhr.status == 401) {
+            alert('Action requires User Log On');
+        }
+        if (xhr.status == 403) {
+            alert('Insufficient user rights');
+        }
+    }
+
+    $(document).ready(function () {
+        $("#btn-systemFilesLife").click(function (event) {
+            event.preventDefault();
+
+            $.ajax({
+                type: 'POST',
+                url: "@Raw(Model.Context.Paths.Roots.MultiPlug)housekeeping/files/system/autodelete?days=" + $('#systemFilesLife').val(),
+                async: false,
+                success: function (data) {
+                    alert("Save Successful");
+                },
+                error: function (data) {
+                    OnError(data);
+                }
+            });
+        });
+
+        $("#btn-extensionSystemRecordsLife").click(function (event) {
+            event.preventDefault();
+
+            $.ajax({
+                type: 'POST',
+                url: "@Raw(Model.Context.Paths.Roots.MultiPlug)housekeeping/files/extensions/records?records=" + $('#extensionSystemRecordsLife').val(),
+                async: false,
+                success: function (data) {
+                    alert("Save Successful");
+                },
+                error: function (data) {
+                    OnError(data);
+                }
+            });
+        });
+
+        $("#btn-extensionsFilesLife").click(function (event) {
+            event.preventDefault();
+
+            $.ajax({
+                type: 'POST',
+                url: "@Raw(Model.Context.Paths.Roots.MultiPlug)housekeeping/files/extensions/autodelete?days=" + $('#extensionsFilesLife').val(),
+                async: false,
+                success: function (data) {
+                    alert("Save Successful");
+                },
+                error: function (data) {
+                    OnError(data);
+                }
+            });
+        });
+
+        $.ajax({
+            url: "@Raw(Model.Context.Paths.Roots.MultiPlug)housekeeping/files/system/autodelete",
+            type: "get",
+            async: false,
+            success: function (data) {
+                $('#systemFilesLife').val(data.days);
+            },
+            error: function (data) {
+                if (data.status == 401 || data.status == 403) {
+                    $("#btn-systemFilesLife").parent().remove();
+                    var parent = $("#systemFilesLife").parent();
+                    $("#systemFilesLife").remove();
+                    $(parent).removeClass("span2");
+                    $(parent).addClass("span4");
+                    $(parent).append('<span class="label label-red">INSUFFICIENT USER RIGHTS</span>');
+                }
+            }
+        });
+
+        $.ajax({
+            url: "@Raw(Model.Context.Paths.Roots.MultiPlug)housekeeping/files/extensions/records",
+            type: "get",
+            async: false,
+            success: function (data) {
+                $('#extensionSystemRecordsLife').val(data.records);
+            },
+            error: function (data) {
+                if (data.status == 401 || data.status == 403) {
+                    $("#btn-extensionSystemRecordsLife").parent().remove();
+                    var parent = $("#extensionSystemRecordsLife").parent();
+                    $("#extensionSystemRecordsLife").remove();
+                    $(parent).removeClass("span2");
+                    $(parent).addClass("span4");
+                    $(parent).append('<span class="label label-red">INSUFFICIENT USER RIGHTS</span>');
+                }
+            }
+        });
+
+        $.ajax({
+            url: "@Raw(Model.Context.Paths.Roots.MultiPlug)housekeeping/files/extensions/autodelete",
+            type: "get",
+            async: false,
+            success: function (data) {
+                $('#extensionsFilesLife').val(data.days);
+            },
+            error: function (data) {
+                if (data.status == 401 || data.status == 403) {
+                    $("#btn-extensionsFilesLife").parent().remove();
+                    var parent = $("#extensionsFilesLife").parent();
+                    $("#extensionsFilesLife").remove();
+                    $(parent).removeClass("span2");
+                    $(parent).addClass("span4");
+                    $(parent).append('<span class="label label-red">INSUFFICIENT USER RIGHTS</span>');
+                }
+            }
+        });
+    });
+</script>
+
