--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsRecipes.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsRecipes.cshtml
@@ -31,18 +31,20 @@
 
     .setting-heading h2 {
         margin-left: 0.1em;
+        margin-top: 0px;
+        margin-bottom: 20px;
     }
 </style>
 
 <div class="setting-heading">
-    <h2>Recipes</h2>
+    <h2><i class="icon-sort-by-attributes-alt"></i>&nbsp;Recipes</h2>
 </div>
 <form method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded">
     <h3 class="box-header">
         Extensions with Recipe Configurators
     </h3>
 
-    <div class="box">
+    <div class="box non-collapsible">
         <div class="row-fluid">
 
             <table class="table table-condensed">
